--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf8" />
-    <title>APM Coding Test</title>
+    <title>Arvato Coding Test</title>
     <meta name="author" content="Dominic Klingenberg"/>
 
 
@@ -64,13 +64,24 @@
                         <div class="row">
                             <div class="col-md">
                                 <div class="input-group">
-                                    <input type="text" id="addition_out" class="form-control" placeholder="1, -10, 7, 13">
+                                    <h3>Das teuerste Produkt ist:</h3>
+                                    <input type="text" id="highest_price_out" class="form-control" placeholder="">
+                                    <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                                </div>
+                                <div class="input-group">
+                                    <h3>Das billigste Produkt ist:</h3>
+                                    <input type="text" id="lowest_price_out" class="form-control" placeholder="">
+                                    <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                                </div>
+                                <div class="input-group">
+                                    <h3>Das meist verkaufte Produkt:</h3>
+                                    <input type="text" id="times_purchased" class="form-control" placeholder="">
                                     <span class="input-group-addon"><i class="fa fa-search"></i></span>
                                 </div>
                             </div>
                             <div class="col-md">
                                 <div class="input-group">
-                                    <input type="text" id="sort_out" class="form-control" placeholder="5,9,6,9,6,5,9,9,4,4">
+                                    <input type="text" id="sort_out" class="form-control" placeholder="">
                                     <span class="input-group-addon"><i class="fa fa-search"></i></span>
                                 </div>
                             </div>
@@ -78,7 +89,7 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="input-group">
-                                <button type="button" id="addition" class="btn btn-default" value="Default">berechnen</button>
+                                <button type="button" id="json_generate" class="btn btn-default" value="Default">anzeigen</button>
                             </div>
                         </div>
                         <div class="col-md">
