--- a/index.html
+++ b/index.html
@@ -57,6 +57,30 @@
                 </div>
             </div>
         </div>
+          <div class="row">
+            <div class="col-lg">
+                <div class="container" style="margin-top: 5%">
+                    <label for="array_out_intersect">Flohzirkus</label><br>
+                    <textarea id="array_out_flears" name="text" cols="35" rows="4"></textarea><br>
+                </div>
+            </div>
+            <div class="col-lg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <h3>Preiseingabe: </h3>
+                            <input type="text" id="preice_input" class="form-control" placeholder="">
+                            <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                            <label for="array_out_intersect">Flohverkauf</label><br>
+                            <textarea id="array_out_flears_sold" name="text" cols="35" rows="4"></textarea><br>
+                            <button type="button" id="array_flears" class="btn btn-default" value="Default">ausgeben</button>
+                        </div>
+                        <div class="col">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
         <div>
             <div class="container" style="margin-top: 5%">
@@ -80,9 +104,8 @@
                                 </div>
                             </div>
                             <div class="col-md">
-                                <div class="input-group">
-                                    <input type="text" id="sort_out" class="form-control" placeholder="">
-                                    <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                                <div class="input-group" id="input_product_land">
+
                                 </div>
                             </div>
                         </div>
@@ -90,11 +113,6 @@
                         <div class="col-md">
                             <div class="input-group">
                                 <button type="button" id="json_generate" class="btn btn-default" value="Default">anzeigen</button>
-                            </div>
-                        </div>
-                        <div class="col-md">
-                            <div class="input-group">
-                                <button type="button" id="sort" class="btn btn-default" value="Default">berechnen</button>
                             </div>
                         </div>
                     </div>
